# local-spotify

./: README.md  data.sql  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  playlist.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  player.rs  playlist.rs  song.rs
src/components/: Footer.tsx  MainView.tsx  Menu.tsx  Playlists.tsx
src/hooks/: useAsyncEffect.ts
