[package]
name = "local-spotify"
version = "0.0.1"
description = "Local music player with Spotify's UI"
authors = ["Kağan Ege"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["protocol-asset", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
id3 = "1.9.0"
rodio = "0.17.3"
once_cell = "1.18.0"
anyhow = "1.0.75"
walkdir = "2.4.0"
tokio = { version = "1.34.0", features = ["sync"] }
rayon = "1.8.0"

[dependencies.ffmpeg-the-third]
version = "1.2.2+ffmpeg-6.0"
default-features = false
features = ["codec", "format"]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]                                   # or "postgres", or "mysql"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
